--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,12 @@ php:
 
   - 7.0
 
+before_script: 
+  - composer install
+
 script:
-  - phpunit includes/
+  - mkdir -p build/logs
+  - phpunit --coverage-clover build/logs/clover.xml
+
+after_script:
+  - php vendor/bin/coveralls -v
